# appconf

./: .gitignore  README.md  pyproject.toml
src/appconf/: __init__.py  app_config.py  bind.py
src/appconf/omegaconf/: __init__.py  errors.py  loader.py  omega_config.py
src/appconf/providers/: __init__.py  argparse.py  base.py  omegaconf.py
tests/: test_app_config.py  test_omega_config.py  test_private_config_error.py  test_providers.py
