[project]
name = "appconf"
dynamic = ["version"]
description = "Typed application config with OmegaConf and argparse binding"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Martin Smith"},
]
keywords = ["config", "omegaconf", "configuration", "argparse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "omegaconf>=2.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "appconf.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
appconf = ["py.typed"]

[tool.pyright]
extraPaths = ["src"]
exclude = ["tests/"]
reportAny = false
reportExplicitAny = false
reportImplicitOverride = false

[dependency-groups]
dev = [
    "pytest>=8.0",
]
